--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "next": "^15.3.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.3",
-    "postcss": "^8.5.3",
-    "@tailwindcss/postcss": "^4.1.3"
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
