--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.3",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
+    "framer-motion": "^12.23.24",
     "next": "^15.3.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
